fixtures/negative/invalid_fastq_separator.fastq
@invalid-fastq
ACGT
not-plus
IIII
